--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_login">Log In</string>
+    <string name="requirements_page">http://apoonline.org/alpharho/memberhome.php</string>
 
 </resources>
