--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">APO_app</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">APO App</string>
     <string name="action_settings">Settings</string>
-    <string name="action_login">Log In</string>
+    <string name="action_logout">Log Out</string>
     <string name="requirements_page">http://apoonline.org/alpharho/memberhome.php</string>
 
 </resources>
