Implemented better/cleaner navigation drawer. - Better color scheme - Changes the actionbar title accordingly - Can load fragments when pressed on the title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_navigation_drawer">NavigationDrawer</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_requirements">Requirements</string>
+    <string name="title_calendar">Events Calendar</string>
+    <string name="title_my_events">My Upcoming Events</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
