Updated some basic text strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">APO App</string>
+    <string name="app_name">Mobile APO</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Log Out</string>
     <string name="requirements_page">http://apoonline.org/alpharho/memberhome.php</string>
-    <string name="title_activity_main">Requirements</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_main">Mobile APO</string>
     <string name="title_activity_navigation_drawer">NavigationDrawer</string>
 
     <string name="title_requirements">Requirements</string>
@@ -15,7 +14,5 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_example">Example action</string>
 
 </resources>
